# wasix-axum-wasmer

./: Cargo.toml  README.md  wasix-axum.wasm
src/: main.rs
